<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="mediateka">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="text_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="android_dev_course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email_address">d-e-n-2010@mail.ru</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_issues_check_connection">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error_player_not_prepared">Ошибка, плеер не подготовлен</string>
    <string name="error_missing_link_to_track_preview">Ошибка. Отсутствует ссылка на отрывок трека</string>
    <string name="reload">Обновить</string>
    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="album_name">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="your_mediateka_is_empty">Ваша медиатека пуста</string>
    <string name="you_havent_created_any_playlists">Вы не создали ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="title_mandatory">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="confirm_closing_creating_list">Завершить создание плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="terminate">Завершить</string>
    <string name="all_unsaved_data_will_be_lost">Всe несохраненные данные будут потеряны</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <!-- Строки с подстановкой значений -->
    <string name="playlist_created">Плейлист \"%1$s"\ создан</string>
    <string name="playlist">Плейлист \"%1$s\"</string>
    <string name="tracks">%1$d трек%2$s</string>
    <string name="track_already_added_to_playlist">Трек уже добавлен в плейлист \"%1$s"\</string>
    <string name="track_added_successfully_to_playlist">Трек успешно добавлен в плейлист \"%1$s"\</string>
    <string name="minutes">%1$d минут%2$s</string>
    <string name="confirm_want_to_delete_track">Хотите удалить трек?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="confirm_want_to_delete_playlist">Хотите удалить плейлист \"%1$s\"?</string>
    <string name="no_tracks_in_playlist_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="redact_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="no_changes_made_in_playlist">Вы не внесли никаких изменений в плейлист</string>
    <string name="no_tracks_added_to_playlist">В плейлисте отсутствуют треки :(</string>
    <string name="audio_player_service">Audio Player service</string>
    <string name="audio_player_service_is_running">Audio player service is running</string>
</resources>