<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        style="@style/ScreenTitle"
        app:title="@string/settings"
        app:titleTextAppearance="@style/TitleTextAppearance" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        style="@style/SwitchItem"
        android:text="@string/dark_theme"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color" />

    <LinearLayout
        style="@style/MenuItemSettingsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/TextSettingsMenu"
            android:text="@string/share_app" />

        <ImageView
            android:id="@+id/shareButton"
            style="@style/DrawableSettingsMenu"
            android:importantForAccessibility="no"
            android:src="@drawable/icon_share" />
    </LinearLayout>

    <LinearLayout
        style="@style/MenuItemSettingsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/TextSettingsMenu"
            android:text="@string/text_support" />

        <ImageView
            android:id="@+id/supportButton"
            style="@style/DrawableSettingsMenu"
            android:importantForAccessibility="no"
            android:src="@drawable/icon_support" />
    </LinearLayout>

    <LinearLayout
        style="@style/MenuItemSettingsMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            style="@style/TextSettingsMenu"
            android:text="@string/user_agreement" />

        <ImageView
            android:id="@+id/userAgreementButton"
            style="@style/DrawableSettingsMenu"
            android:importantForAccessibility="no"
            android:src="@drawable/icon_arrow_forward" />

    </LinearLayout>


</LinearLayout>
