<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/main_horizontal_margin"
        android:paddingTop="14dp"
        android:paddingBottom="@dimen/main_horizontal_margin"
        android:text="@string/settings"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_horizontal_margin"
            android:layout_marginVertical="21dp"
            android:layout_weight="1"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_horizontal_margin"
            android:layout_marginVertical="21dp"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="22dp"
            android:src="@drawable/icon_share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_horizontal_margin"
            android:layout_marginVertical="21dp"
            android:text="@string/text_support"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_support"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/end_margin"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/main_horizontal_margin"
            android:layout_marginVertical="21dp"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/settings_menu_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_proceed_arrow"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/end_margin"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_gray" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:icon="@drawable/icon_search"
            app:iconTint="@color/black"
            app:iconGravity="textTop"/>

        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/mediateka"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:icon="@drawable/icon_mediateka"
            app:iconTint="@color/black"
            app:iconGravity="textTop"/>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="12sp"
            app:icon="@drawable/icon_settings"
            app:iconTint="@color/blue"
            app:iconGravity="textTop"/>

    </LinearLayout>

</LinearLayout>