<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Экран плеера -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorPrimary"
        tools:context=".player.ui.fragment.PlayerFragment">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/player_toolbar"
            style="@style/ScreenTitle"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/icon_arrow_back" />

        <!-- Обложка -->
        <ImageView
            android:id="@+id/album_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/player_album_cover_margin_top"
            android:importantForAccessibility="no"
            android:src="@drawable/album_placeholder"
            app:layout_constraintBottom_toTopOf="@id/track_name"
            app:layout_constraintDimensionRatio="h, 1:1"
            app:layout_constraintEnd_toStartOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/player_toolbar" />

        <!-- Название песни -->
        <TextView
            android:id="@+id/track_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_track_name_margin_top"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toStartOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/album_cover" />

        <!-- Имя исполнителя -->
        <TextView
            android:id="@+id/artist_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_artist_name_margin_top"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toStartOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/track_name" />

        <!-- Кнопка "добавить в плейлист" -->
        <ImageButton
            android:id="@+id/add_to_playlist_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/button_plus"
            app:layout_constraintBottom_toTopOf="@id/play_button"
            app:layout_constraintEnd_toStartOf="@id/play_button"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toEndOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/play_button" />

        <!-- Кнопка "стоп-плей" -->
        <ImageButton
            android:id="@+id/play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_play_button_margin_top"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/button_play"
            app:layout_constraintBottom_toTopOf="@id/listening_time"
            app:layout_constraintEnd_toStartOf="@id/like_button"
            app:layout_constraintStart_toEndOf="@id/add_to_playlist_button"
            app:layout_constraintTop_toBottomOf="@id/artist_name" />

        <!-- Кнопка "лайк" -->
        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:importantForAccessibility="no"
            android:src="@drawable/button_like_inactive"
            app:layout_constraintBottom_toTopOf="@id/play_button"
            app:layout_constraintEnd_toStartOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@id/play_button"
            app:layout_constraintTop_toBottomOf="@id/play_button" />

        <TextView
            android:id="@+id/listening_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/player_listening_time_margin_top"
            android:fontFamily="@font/ys_display_medium"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_small"
            app:layout_constraintEnd_toStartOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/play_button" />

        <!-- Длительность трека -->
        <TextView
            android:id="@+id/track_time_text"
            style="@style/PlayerDescriptionItemsLeftColumn"
            android:layout_marginTop="@dimen/player_description_margin_top"
            android:text="@string/track_time"
            app:layout_constraintBottom_toTopOf="@id/album_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="duration_text"
            app:layout_constraintTop_toBottomOf="@id/listening_time"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/track_time"
            style="@style/PlayerDescriptionItemsRightColumn"
            app:layout_constraintBottom_toBottomOf="@id/track_time_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_barrier"
            app:layout_constraintTop_toTopOf="@id/track_time_text"
            tools:ignore="RtlSymmetry" />

        <!-- Название альбома -->
        <TextView
            android:id="@+id/album_text"
            style="@style/PlayerDescriptionItemsLeftColumn"
            android:text="@string/album_name"
            app:layout_constraintBottom_toTopOf="@id/year_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="album_text"
            app:layout_constraintTop_toBottomOf="@id/track_time_text"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/album_name"
            style="@style/PlayerDescriptionItemsRightColumn"
            app:layout_constraintBottom_toBottomOf="@id/album_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_barrier"
            app:layout_constraintTop_toTopOf="@id/album_text"
            tools:ignore="RtlSymmetry" />

        <!-- Год выхода трека -->
        <TextView
            android:id="@+id/year_text"
            style="@style/PlayerDescriptionItemsLeftColumn"
            android:text="@string/year"
            app:layout_constraintBottom_toTopOf="@id/genre_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="year_text"
            app:layout_constraintTop_toBottomOf="@id/album_text"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/year_value"
            style="@style/PlayerDescriptionItemsRightColumn"
            app:layout_constraintBottom_toBottomOf="@id/year_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_barrier"
            app:layout_constraintTop_toTopOf="@id/year_text"
            tools:ignore="RtlSymmetry" />

        <!-- Жанр трека -->
        <TextView
            android:id="@+id/genre_text"
            style="@style/PlayerDescriptionItemsLeftColumn"
            android:text="@string/genre"
            app:layout_constraintBottom_toTopOf="@id/country_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="genre_text"
            app:layout_constraintTop_toBottomOf="@id/year_text"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/genre"
            style="@style/PlayerDescriptionItemsRightColumn"
            app:layout_constraintBottom_toBottomOf="@id/genre_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_barrier"
            app:layout_constraintTop_toTopOf="@id/genre_text"
            tools:ignore="RtlSymmetry" />

        <!-- Страна -->
        <TextView
            android:id="@+id/country_text"
            style="@style/PlayerDescriptionItemsLeftColumn"
            android:text="@string/country"
            app:layout_constraintBottom_toTopOf="@id/bottom_border"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTag="country_text"
            app:layout_constraintTop_toBottomOf="@id/genre_text"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/country"
            style="@style/PlayerDescriptionItemsRightColumn"
            app:layout_constraintBottom_toBottomOf="@id/country_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_barrier"
            app:layout_constraintTop_toTopOf="@id/country_text"
            tools:ignore="RtlSymmetry" />

        <!-- Отступы и барьеры -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/player_vertical_guide_start" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/player_vertical_guide_end" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/player_horizontal_guide_bottom" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/text_barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_tags="duration_text, album_text, year_text, genre_text, country_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Затемнитель -->
    <View
        android:id="@+id/player_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <!-- Нижняя шторка -->
    <LinearLayout
        android:id="@+id/player_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_bottom_sheet"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="@dimen/bottom_sheet_rounder_width"
            android:layout_height="@dimen/bottom_sheet_rounder_height"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/bottom_sheet_rounder_margin_top"
            android:background="@drawable/shape_rounder" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/bottom_sheet_title_margin_top"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/add_to_playlist"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_size_medium" />

        <Button
            android:id="@+id/bottom_sheet_new_playlist_button"
            style="@style/NewPlaylistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/bottom_sheet_button_margin_top"
            android:text="@string/new_playlist" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/player_bottom_sheet_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bottom_sheet_recycler_view_margin_top" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
